--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Kontakt</a></li>
@@ -16,7 +17,12 @@
             <li><a href="">Über Uns!</a></li>
         </ul>
     </header>
+
+    <input type="button" onclick="klick1()" value="hide">
+    <input type="button" onclick="klick2()" value="show">
+    
     <main>
+        
         <article>
             <h3>Überschrift 1</h3>
             <p>
