--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="">Über Uns!</a></li>
         </ul>
     </header>
-
+<!-- Was soll das?-->
     <input type="button" onclick="klick1()" value="hide">
     <input type="button" onclick="klick2()" value="show">
     
